tests/e2e/arg_name_shorthand_error3.error
Error: syntax error in story at line 5, column 7

5|    test(:2 + 2)
            ^^^^^

E0118: Function `test` requires arguments to be named
